fixed consistency of top spacing

--- a/project/static/css/custom.css
+++ b/project/static/css/custom.css
@@ -20,6 +20,10 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px #2BA9F0, 6px -3px 4px 0px rgba(0, 0, 0, 0.79);
 }
 
+.top-section-first-div{
+    margin-top: 85px;
+}
+
 /** Swiper */
 .swiper-slide {
     transform: translate3d(0, 0, 0); /* Forces GPU acceleration */
@@ -32,7 +36,7 @@
     max-width: 100%; /* Prevent it from exceeding the parent's width */
   }
 
-/** Swiper */
+/** //Swiper */
 
 /** Map css */
 
